fixed black ul li on mobile teachers

--- a/src/assets/scss/_teachers.scss
+++ b/src/assets/scss/_teachers.scss
@@ -33,7 +33,7 @@
 
         transition: transform 0.2s;
         @media (max-width: 768px) {
-          background-color: var(--color-black);
+          background-color: white;
         }
         font-size: 1.2rem;
         color: var(--color-black);
